--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -32,9 +32,9 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2 estilobtn" type="search" placeholder="que estás buscando?" aria-label="buscar">
-                  <button class="btn btn-outline-success estilobtn2" type="submit">buscar!</button>
-                </form>
+                    <input class="form-control me-2 estilobtn" type="search" placeholder="que estás buscando?" aria-label="buscar">
+                    <button class="btn estilobtn2" type="submit">buscar!</button>
+                  </form>
             </div>
         </nav>
         <h1>otra mano</h1>
@@ -43,6 +43,49 @@
     <main>
         <h2>testimonios de nuestras usuarias</h2>
 
+        <div id="carouselExampleCaptions" class="carousel slide edicioncarousel"> <!--para editar el carrusel tamaño-->
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active custom-slide">
+                <img src="../assets/img/mujer1.jpg" class="edicionimg" alt="mujer con cuadernos frente a un restaurante"> <!--editar tamaño imagen-->
+                <div class="carousel-caption ediciontextos"> <!--editar los textos-->
+                  <h5 class="ediciontitulo">tatiana</h5> <!--editar subtt-->
+                  <p class="ediciontexto">desde que descubri 'OTRA MANO' mi ropero esta lleno de básicos que pude encontrar a solo un click de distancia!</p> <!--editar texto-->
+                </div>
+              </div>
+              <div class="carousel-item active custom-slide">
+                <img src="../assets/img/mujer3.jpg" class="edicionimg" alt="mujer sacandose una selfie"> <!--editar tamaño imagen-->
+                <div class="carousel-caption ediciontextos"> <!--editar los textos-->
+                  <h5 class="ediciontitulo">nerea</h5> <!--editar subtt-->
+                  <p class="ediciontexto">haber encontrado esta comunidad me facilitó poder encontrar prendas de mi estilo sin recorrer mil locales</p> <!--editar texto-->
+                </div>
+              </div>
+              <div class="carousel-item active custom-slide">
+                <img src="../assets/img/mujer3paseo.jpg" class="edicionimg" alt="mujer asiatica seria frente al rio"> <!--editar tamaño imagen-->
+                <div class="carousel-caption ediciontextos"> <!--editar los textos-->
+                  <h5 class="ediciontitulo">mariana</h5> <!--editar subtt-->
+                  <p class="ediciontexto">prendas de marcas internacionles a precios accesibles sin tener que viajar, qué más puedo pedir?</p> <!--editar texto-->
+                </div>
+              </div>
+
+
+
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          
 
     <footer>
         <div class="footer-container">
