--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2 estilobtn" type="search" placeholder="que estás buscando?" aria-label="buscar">
-                  <button class="btn btn-outline-success estilobtn2" type="submit">buscar!</button>
+                  <button class="btn estilobtn2" type="submit">buscar!</button>
                 </form>
             </div>
         </nav>
