--- a/pages/nuestrahistoria.html
+++ b/pages/nuestrahistoria.html
@@ -32,9 +32,9 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2 estilobtn" type="search" placeholder="que estás buscando?" aria-label="buscar">
-                  <button class="btn btn-outline-success estilobtn2" type="submit">buscar!</button>
-                </form>
+                    <input class="form-control me-2 estilobtn" type="search" placeholder="que estás buscando?" aria-label="buscar">
+                    <button class="btn estilobtn2" type="submit">buscar!</button>
+                  </form>
             </div>
         </nav>
         <h1>otra mano</h1>
