--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -42,7 +42,6 @@
     </header>
     <main>
         <h2>testimonios de nuestras usuarias</h2>
-
         <div id="carouselExampleCaptions" class="carousel slide edicioncarousel"> <!--para editar el carrusel tamaño-->
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -57,14 +56,14 @@
                   <p class="ediciontexto">desde que descubri 'OTRA MANO' mi ropero esta lleno de básicos que pude encontrar a solo un click de distancia!</p> <!--editar texto-->
                 </div>
               </div>
-              <div class="carousel-item active custom-slide">
+              <div class="carousel-item custom-slide">
                 <img src="../assets/img/mujer3.jpg" class="edicionimg" alt="mujer sacandose una selfie"> <!--editar tamaño imagen-->
                 <div class="carousel-caption ediciontextos"> <!--editar los textos-->
                   <h5 class="ediciontitulo">nerea</h5> <!--editar subtt-->
                   <p class="ediciontexto">haber encontrado esta comunidad me facilitó poder encontrar prendas de mi estilo sin recorrer mil locales</p> <!--editar texto-->
                 </div>
               </div>
-              <div class="carousel-item active custom-slide">
+              <div class="carousel-item custom-slide">
                 <img src="../assets/img/mujer3paseo.jpg" class="edicionimg" alt="mujer asiatica seria frente al rio"> <!--editar tamaño imagen-->
                 <div class="carousel-caption ediciontextos"> <!--editar los textos-->
                   <h5 class="ediciontitulo">mariana</h5> <!--editar subtt-->
