--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">   
     <link rel="stylesheet" href="../styles/styles.css">
-    <title>otra mano</title>
+    <title>otra mano | contactanos</title>
+    <link rel="shortcut icon" href="../assets/img/logo2.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -42,18 +43,18 @@
     </header>
     <main>
         <section class="contactoform">
-            <h2>contactanos</h2>
+            <h2>contactanos ⋆˙⟡</h2>
             <form action="">
                 <div>
-                    <label for="nombreapellido">nombre y apellido</label>
+                    <label for="nombreapellido">nombre y apellido:</label>
                     <input type="text" id="nombreapellido">
                 </div>
                 <div>
-                    <label for="mail">correo electrónico</label>
+                    <label for="mail">correo electrónico:</label>
                     <input type="email" name="" id="mail">
                 </div>
                 <div>
-                    <label for="mensaje">dejanos tu consulta</label>
+                    <label for="mensaje">dejanos tu consulta:</label>
                     <textarea name="" id="mensaje">escribí tu consulta acá (: </textarea>
                 </div>
                 <input type="submit" value="¡enviar!" class="boton">
