--- a/pages/nuestrahistoria.html
+++ b/pages/nuestrahistoria.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">   
     <link rel="stylesheet" href="../styles/styles.css">
-    <title>otra mano</title>
+    <title>otra mano | nuestra historia</title>
+    <link rel="shortcut icon" href="../assets/img/logo2.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -41,7 +42,7 @@
         <p class="ptitulo">dale otra oportunidad a tu ropa ୨ৎ</p>
     </header>
     <main>
-        <h2>quiénes somos?</h2>
+        <h2>¿quiénes somos?</h2>
         <div class="pquienes">
             <img src="../assets/img/amigas.jpg" alt="amigas de la mano en la pla">
             <p>hola a todas! somos pauli y juli. tenemos 20 años y somos amigas ¡HACE 15!. entre tantas cosas que compartimos y coincidimos, nos encanta la ropa. nos conocemos tanto que sin darnos cuenta entendimos que las dos buscabamos lo mismo: ropa buena, bonita y barata. buena calidad, linda y economica, sin que una condición importe mas que la anterior. 
