--- a/pages/iniciosesion.html
+++ b/pages/iniciosesion.html
@@ -6,30 +6,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">   
     <link rel="stylesheet" href="../styles/styles.css">
     <title>otra mano | inicio sesión</title>
-    <link rel="shortcut icon" href="../assets/img/logo2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/logonegrosimple.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a href="../index.html" class="logonav">
-                <img src="../assets/img/logo.jpg" alt="Logo que redirecciona a home"></a>
+                <img src="../assets/img/logonegrosimple.jpg" alt="Logo que redirecciona a home"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                    <a  href="nuestrahistoria.html" class="nav-link active" href="#">🍒 nuestra historia</a>
+                    <a  href="nuestrahistoria.html" class="nav-link active" href="#">nuestra historia</a>
                     </li>
                     <li class="nav-item">
-                    <a href="testimonios.html" class="nav-link active" href="#">🍄 testimonios de usuarias</a>
+                    <a href="testimonios.html" class="nav-link active" href="#">testimonios de usuarias</a>
                     </li>
                     <li class="nav-item">
-                    <a href="contacto.html" class="nav-link active" href="#">🍓 contactanos</a>
+                    <a href="contacto.html" class="nav-link active" href="#">contactanos</a>
                     </li>
                     <li class="nav-item">
-                    <a href="iniciosesion.html" class="nav-link active" href="#">🎀 entrá/registrate</a>
+                    <a href="iniciosesion.html" class="nav-link active" href="#">entrá/registrate</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -39,7 +39,7 @@
             </div>
         </nav>
         <h1>otra mano</h1>
-        <p class="ptitulo">dale otra oportunidad a tu ropa ୨ৎ</p>
+        <p class="ptitulo">dale otra oportunidad a tu ropa</p>
     </header>
     <section class="inicioform">
         <h2>hey! inicia sesión!</h2>
