--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">   
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut icon" href="../assets/img/logonegrosimple.jpg" type="image/x-icon">
     <title>otra mano | inicio</title>
 </head>
@@ -158,7 +158,7 @@
                     <div class="js-newsletter newsletter">
                         <h2>newsletter</h2>
                             <p class="mb-4">no te pierdas todas las novedades! ¡Registrate ya mismo y comenza a disfrutarlas!</p>
-                            <input type="email" id="email" class="form-control  " autocorrect="off" autocapitalize="off" name="email" placeholder="Email" aria-label="Email">
+                            <input type="email" id="email" class="email-input" autocorrect="off" autocapitalize="off" name="email" placeholder="Email" aria-label="Email">
                     </div>
                             <input type="submit" name="contact" class="btn btn-primary" value="Enviar">
                 </div>
