--- a/pages/registro.html
+++ b/pages/registro.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">   
-    <link rel="stylesheet" href="../styles/styles.css">
-    <title>otra mano | registrate</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">    
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>otra mano | nuestra historia</title>
     <link rel="shortcut icon" href="../assets/img/logonegrosimple.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
+        <div class="contenedor">
+        <p class="texto-animado"> 3 cuotas sin interes | 15% off con transferencia | envíos a todo el país </p></div>
+        <div class="anuncio">💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁</div>
         <nav class="navbar navbar-expand-lg barrnav">
             <div class="container-fluid">
                 <a href="../index.html" class="logonav">
@@ -29,8 +35,9 @@
                     <a href="contacto.html" class="nav-link active" href="#">contactanos</a>
                     </li>
                     <li class="nav-item">
-                    <a href="iniciosesion.html" class="nav-link active" href="#">entrá/registrate</a>
-                    </li>
+                        <a href="iniciosesion.html" class="nav-link active" href="#"><img class="login" src="../assets/img/acceso.png" alt="login"></a>
+                        </li>
+                    </ul> 
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2 estilobtn" type="search" placeholder="que estás buscando?" aria-label="buscar">
@@ -41,24 +48,38 @@
         <h1>otra mano</h1>
         <p class="ptitulo">dale otra oportunidad a tu ropa</p>
     </header>
-    <section class="inicioform">
-        <h2>hey! inicia sesión!</h2>
-        <form action="">
-            <div>
-                <label for="nombre">nombre:</label>
-                <input type="text" id="usuario">
-                <label for="apellido">apellido:</label>
-                <input type="text" id="apellido">
-                <label for="nombre">usuario:</label>
-                <input type="text" id="usuario">
-                <label for="password">contraseña:</label>
-                <input type="password" name="" id="password">
+    <main>
+        <section class="contactoform">
+            <h2>hey! inicia sesión!</h2>
+            <form action="">
+                <div>
+                    <label for="nombre">nombre:</label>
+                    <input type="text" id="nombre">
+                </div>
+                <div>
+                    <label for="apellido">apellido:</label>
+                    <input type="text" id="apellido">
+                </div>
+                <div>
+                    <label for="mail">correo electrónico:</label>
+                    <input type="email" name="" id="mail">
+                </div>
+                <div>
+                    <label for="nombre">usuario:</label>
+                    <input type="text" id="usuario">
+                </div>
+                <div>
+                    <label for="password">contraseña:</label>
+                    <input type="password" name="" id="password">
+                </div>
+                <div>
                 <label for="nacimiento">fecha de nacimiento:</label>
                 <input type="date" id="nacimiento">
-            </div>
-            <input type="submit" value="registrate!" class="boton">
-        </form>
-    </section>
+                </div>
+                <input type="submit" value="¡enviar!" class="boton">
+            </form>
+        </section>
+    </main>
     <footer>
         <div class="footer-container">
             <p class="footer-msj">✮⋆˙ otra mano | dale otra oportunidad a tu ropa ✮⋆˙</p>
