--- a/pages/nuestrahistoria.html
+++ b/pages/nuestrahistoria.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../css/styles.css">
     <title>otra mano | nuestra historia</title>
     <link rel="shortcut icon" href="../assets/img/logonegrosimple.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
+        <div class="contenedor">
+        <p class="texto-animado"> 3 cuotas sin interes | 15% off con transferencia | envíos a todo el país </p></div>
+        <div class="anuncio">💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁</div>
         <nav class="navbar navbar-expand-lg barrnav">
             <div class="container-fluid">
                 <a href="../index.html" class="logonav">
@@ -29,8 +35,9 @@
                     <a href="contacto.html" class="nav-link active" href="#">contactanos</a>
                     </li>
                     <li class="nav-item">
-                    <a href="iniciosesion.html" class="nav-link active" href="#">entrá/registrate</a>
-                    </li>
+                        <a href="iniciosesion.html" class="nav-link active" href="#"><img class="login" src="../assets/img/acceso.png" alt="login"></a>
+                        </li>
+                    </ul> 
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2 estilobtn" type="search" placeholder="que estás buscando?" aria-label="buscar">
@@ -43,19 +50,23 @@
     </header>
     <main>
         <h2>¿quiénes somos?</h2>
-        <div class="pquienes">
-            <img src="../assets/img/amigas.jpg" alt="amigas de la mano en la pla">
-            <p>hola a todas! somos pauli y juli. tenemos 20 años y somos amigas ¡HACE 15!. entre tantas cosas que compartimos y coincidimos, nos encanta la ropa. nos conocemos tanto que sin darnos cuenta entendimos que las dos buscabamos lo mismo: ropa buena, bonita y barata. buena calidad, linda y economica, sin que una condición importe mas que la anterior. 
+<div class="pquienes" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
+  <img src="../assets/img/amigas.jpg" alt="amigas de la mano en la playa">
+  <div class="textos" data-aos="zoom-in-up" data-aos-duration="1200" data-aos-delay="400">
+            <p class="parrafo1">hola a todas! somos pauli y juli. tenemos 20 años y somos amigas ¡HACE 15!. entre tantas cosas que compartimos y coincidimos, nos encanta la ropa. nos conocemos tanto que sin darnos cuenta entendimos que las dos buscabamos lo mismo: ropa buena, bonita y barata. buena calidad, linda y economica, sin que una condición importe mas que la anterior. 
             muchas veces caminamos tardes enteras recorriendo outlets, intercambiabamos ropa entre nosotras, nos comprabamos y vendiamos ropa con otras amigas y así podemos contarles mil cosas más que hicimos para poder acceder a variedad de ropa.</p>
-            <p>otra mano nace de esto, de la necesidad que tenemos en comun nosotras, querer ropa que cumpla el requisito de las 3 B. porque sabemos mejor que nadie lo dificil que es encontrar ropa que se adapte a nuestro estilo, a nuestro bolsillo y a nuestros gustos.
+            <p class="parrafo2">otra mano nace de esto, de la necesidad que tenemos en comun nosotras, querer ropa que cumpla el requisito de las 3 B. porque sabemos mejor que nadie lo dificil que es encontrar ropa que se adapte a nuestro estilo, a nuestro bolsillo y a nuestros gustos.
             compra y vende tu ropa con nosotras, contamos con un selectivo grupo de moderadoras que dedican sus horas del día a ahorrarte el trabajo a vos de ver si las prendas están en buen estado, si valen la pena, si realmente el precio que les quieren poner sus dueñas sea el correcto.
             animate a ser parte de nuestra comunidad! <3</p>
         </div>
+        </div>
+        
+
     </main>
     <footer>
         <div class="footer-container">
             <p class="footer-msj">✮⋆˙ otra mano | dale otra oportunidad a tu ropa ✮⋆˙</p>
-            <a href="preguntas.html" class="footera">preguntas frecuentes</a>
+            <a href="./pages/preguntas.html" class="footera">preguntas frecuentes</a>
             <p class="copyright">© 2025 REWEAR - Todos los derechos reservados.</p>
         </div>
     </footer>
