--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -3,41 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">   
-    <link rel="stylesheet" href="../styles/styles.css">
-    <title>otra mano | testimonios de nuestras usuarias</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">    
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>otra mano | nuestra historia</title>
     <link rel="shortcut icon" href="../assets/img/logonegrosimple.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
+      <div class="contenedor">
+      <p class="texto-animado"> 3 cuotas sin interes | 15% off con transferencia | envíos a todo el país </p></div>
+      <div class="anuncio">💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁 💖💕🎀💌🧸🩰🎠🍓🧁</div>
       <nav class="navbar navbar-expand-lg barrnav">
-        <div class="container-fluid">
-            <a href="../index.html" class="logonav">
-            <img src="../assets/img/logonegrosimple.jpg" alt="Logo que redirecciona a home"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                <a  href="nuestrahistoria.html" class="nav-link active" href="#">nuestra historia</a>
-                </li>
-                <li class="nav-item">
-                <a href="testimonios.html" class="nav-link active" href="#">testimonios de usuarias</a>
-                </li>
-                <li class="nav-item">
-                <a href="contacto.html" class="nav-link active" href="#">contactanos</a>
-                </li>
-                <li class="nav-item">
-                <a href="iniciosesion.html" class="nav-link active" href="#">entrá/registrate</a>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2 estilobtn" type="search" placeholder="que estás buscando?" aria-label="buscar">
-              <button class="btn estilobtn2" type="submit">buscar!</button>
-            </form>
-        </div>
-    </nav>
+          <div class="container-fluid">
+              <a href="../index.html" class="logonav">
+              <img src="../assets/img/logonegrosimple.jpg" alt="Logo que redirecciona a home"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                  <a  href="nuestrahistoria.html" class="nav-link active" href="#">nuestra historia</a>
+                  </li>
+                  <li class="nav-item">
+                  <a href="testimonios.html" class="nav-link active" href="#">testimonios de usuarias</a>
+                  </li>
+                  <li class="nav-item">
+                  <a href="contacto.html" class="nav-link active" href="#">contactanos</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="iniciosesion.html" class="nav-link active" href="#"><img class="login" src="../assets/img/acceso.png" alt="login"></a>
+                      </li>
+                  </ul> 
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2 estilobtn" type="search" placeholder="que estás buscando?" aria-label="buscar">
+                <button class="btn estilobtn2" type="submit">buscar!</button>
+              </form>
+          </div>
+      </nav>
         <h1>otra mano</h1>
         <p class="ptitulo">dale otra oportunidad a tu ropa</p>
     </header>
@@ -71,10 +78,6 @@
                   <p class="ediciontexto">prendas de marcas internacionles a precios accesibles sin tener que viajar, qué más puedo pedir?</p> <!--editar texto-->
                 </div>
               </div>
-
-
-
-
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -85,8 +88,6 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          
-
     <footer>
         <div class="footer-container">
             <p class="footer-msj">✮⋆˙ otra mano | dale otra oportunidad a tu ropa ✮⋆˙</p>
